kubernetes/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  ports:
    - name: http
      port: 7878
      targetPort: http
  selector:
    app.kubernetes.io/name: radarr
