kubernetes/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.home.mcnees.me`) || Host(`radarr-k8s.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: legacy-home-wildcard-tls
